--- a/Daily Programming Challenges/package.json
+++ b/Daily Programming Challenges/package.json
@@ -1,11 +1,15 @@
 {
   "name": "daily-programming-challenges",
   "version": "1.0.0",
-  "description": "",
+  "description": "[Source](https://www.reddit.com/r/dailyprogrammer/wiki/challenges)",
   "main": "#1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0"
+  }
 }
