--- a/Daily Programming Challenges/package.json
+++ b/Daily Programming Challenges/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "numbers2words": "^1.4.0"
   }
 }
